--- a/style.css
+++ b/style.css
@@ -1,23 +1,110 @@
-img {
-    width: 350px;
+section img {
+    width: 210px;
     position: relative;
-    margin: 0;
+    margin: 0 auto;
+    display: block;
+    margin-bottom: 65px;
+    transition: all .2s ease-in-out;
+    z-index: 0;
+}
+
+section img:hover {
+    transform: scale(1.5);
 }
 
 h3 {
-    position: absolute;
-    z-index: 10;
+    z-index: 1000;
+    color: red;
+    font-size: 1.5em;
 }
 
 #logo {
-    width: 150px;
     display: inline-block;
+    width: 150px;
+    grid-area: logo;
+    text-align: center;
+}
+
+#log {
+    width: 150px;
+}
+
+h1 {
+    font-size: 1.8em;
+    font-family: Bookman Old Style;
+    text-align: center;
+    margin-top: 35px;
+    margin-bottom: 35px;
+    background-color: floralwhite;
+    font-weight: 400;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+h2 {
+    text-align: center;
+    font-family: Bookman Old Style;
+    font-size: 2em;
+}
+
+p {
+    font-size: 1.5em;
+    font-family: Montserrat;
+    display: block;
+    text-align: center;
+    margin: 0;
+}
+
+li {
+    list-style: none;
+}
+
+input {
+    display: none;
+}
+
+label {
+    cursor: pointer;
+    font-size: 10vw;
+    margin-left: 45vw;
 }
 
 #navigation {
     display: inline-block;
+    position: absolute;
+    margin-left: 1vw;
 }
 
-p {
-    display: inline-block;
+nav {
+    max-height: 0;
+    overflow: hidden;
+    background-color: dimgray;
+    opacity: 0.8;
+    height: 100%;
+    padding-right: 2vw;
+}
+
+input:checked~nav {
+    max-height: 25vh;
+    z-index: 5;
+}
+
+nav a {
+    text-decoration: none;
+    color: white;
+    font-family: Montserrat;
+    line-height: 30px;
+    font-size: 1.5em;
+}
+
+nav a:hover {
+    color: grey;
+    background-color: transparent;
+    text-decoration: underline;
+}
+
+nav a:active {
+    color: darkgray;
+    background-color: transparent;
+    text-decoration: underline;
 }
